<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/lipuka.android"
    xmlns:greendroid="http://schemas.android.com/apk/res/lipuka.android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
android:background="@drawable/layer_background">     

        <TextView
		android:id="@+id/activate_header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:text="@string/network_error_title"
		android:gravity="center_vertical|left" 
		style="@style/activate_text_header"
				android:layout_marginTop="32dp"
		/>
				<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		>
	<TextView
		android:id="@+id/activate_text"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
        android:text="@string/network_error"
		android:gravity="center_vertical|left" 
		style="@style/activate_text"/>
		</ScrollView>
			<Button
	android:id="@+id/network_retry_topsongs"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/network_retry"
        android:textStyle="bold"
        android:background="@drawable/lipuka_button"
        		style="@style/lipuka_button"/>
    	 
</LinearLayout>
