<?xml version="1.0" encoding="utf-8"?>
		<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		            android:background="@drawable/layer_background"
				            android:fillViewport="true"
		>
		
		<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
            android:orientation="vertical"
            >
                <RelativeLayout
    android:gravity="center_horizontal" 
		android:layout_width="fill_parent"
    android:layout_height="fill_parent"
> 

        <ImageView
	        android:id="@+id/center_bg"
	        android:layout_centerInParent="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/center_bg" />
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
            android:orientation="vertical"
                                 android:layout_alignParentTop="true"
            >
    <TextView
        android:id="@+id/one_time_pin_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_time_pin_prompt"
         android:gravity="left" 
    android:layout_gravity="center_vertical|center_horizontal|center" 
        		style="@style/lipuka_text_view"/>
     
        
    <EditText
        android:id="@+id/one_time_pin_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center" 
        />
        
           <TextView
        android:id="@+id/new_pin_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pin_prompt"
         android:gravity="left" 
    android:layout_gravity="center_vertical|center_horizontal|center" 
        		style="@style/lipuka_text_view"/>
     
        
    <EditText
        android:id="@+id/new_pin_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center" 
        />
        
           <TextView
        android:id="@+id/confirm_pin_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pin_prompt"
         android:gravity="left" 
    android:layout_gravity="center_vertical|center_horizontal|center" 
        		style="@style/lipuka_text_view"/>
     
        
    <EditText
        android:id="@+id/confirm_pin_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center" 
        />
        
        <LinearLayout android:layout_width="fill_parent"
		android:gravity="center_horizontal" android:id="@+id/buttons"
		android:orientation="horizontal" android:layout_height="wrap_content"
		android:layout_marginTop="20dp">
		
		 <Button
        android:id="@+id/pin_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" 
    android:layout_gravity="center_vertical|center_horizontal|center" 
                 android:textStyle="bold"
        android:background="@drawable/lipuka_button"
        		style="@style/lipuka_button"
        android:text="@string/pin_submit" />
        
			</LinearLayout>
		
</LinearLayout>
		    </RelativeLayout>
    	
</LinearLayout>

		</ScrollView>

