<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/layer_background"
    >
   
		
		<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            
		           <include layout="@layout/ecobank_action_bar" />
		           
		           <FrameLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	 		<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
				            android:fillViewport="true"
		>
			    		<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
            android:orientation="vertical"
            >
 <TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:text="Change Mobile PIN"
		android:gravity="center" 
		style="@style/title_text"
	    android:layout_gravity="center" 
		/>

 			   			  <LinearLayout 
 android:layout_width="fill_parent"
 android:layout_height="1dp"
 android:orientation="horizontal"  
     android:background="@drawable/list_divider"
 android:layout_marginTop="2dp"
 android:layout_marginBottom="2dp"
     >
                                           </LinearLayout> 
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:layout_gravity="center" 
            >
    <TextView
        android:id="@+id/one_time_pin_prompt"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="Enter current PIN"
         android:gravity="left" 
    android:layout_gravity="center_vertical|center_horizontal|center" 
        		style="@style/lipuka_text_view"/>
     
        
    <EditText
        android:id="@+id/one_time_pin_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center" 
        />
        
     			</LinearLayout>
     			
 			   			  <LinearLayout 
 android:layout_width="fill_parent"
 android:layout_height="1dp"
 android:orientation="horizontal"  
     android:background="@drawable/list_divider"
 android:layout_marginTop="2dp"
 android:layout_marginBottom="2dp"
     >
                                           </LinearLayout>
    
  <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:layout_gravity="center" 
            >
      <TextView
        android:id="@+id/new_pin_prompt"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/new_pin_prompt"
         android:gravity="left" 
    android:layout_gravity="center" 
        		style="@style/lipuka_text_view"/>
     
        
    <EditText
        android:id="@+id/new_pin_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
    android:layout_gravity="center" 
        />
        
   			</LinearLayout>
    
   			   			  <LinearLayout 
 android:layout_width="fill_parent"
 android:layout_height="1dp"
 android:orientation="horizontal"  
     android:background="@drawable/list_divider"
 android:layout_marginTop="2dp"
 android:layout_marginBottom="2dp"
     >
                                           </LinearLayout>
                                           
   <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
            android:orientation="horizontal"    
     android:layout_gravity="center" 
      >
     <TextView
        android:id="@+id/confirm_pin_prompt"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pin_prompt"
         android:gravity="left" 
    android:layout_gravity="center" 
        		style="@style/lipuka_text_view"/>
     
        
    <EditText
        android:id="@+id/confirm_pin_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
    android:layout_gravity="center"     />
  
  			</LinearLayout>
	
	 			   			  <LinearLayout 
 android:layout_width="fill_parent"
 android:layout_height="1dp"
 android:orientation="horizontal"  
     android:background="@drawable/list_divider"
 android:layout_marginTop="2dp"
 android:layout_marginBottom="2dp"
     >
                                           </LinearLayout>
                                           
	 			   			  	 <Button
        android:id="@+id/pin_submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" 
    android:layout_gravity="center" 
                 android:textStyle="bold"
        android:background="@drawable/ecobank_button"
        		style="@style/lipuka_button"
        android:text="@string/pin_submit" />
        
		</LinearLayout>
		
			</ScrollView>
			    			    		 <RelativeLayout
    android:id="@+id/help_layout"
		android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone"
>   
 <WebView  
    android:id="@+id/webview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
    android:background="@drawable/help_background"
/>

 <ImageButton
    	 android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:background="#00000000"
        android:src="@drawable/fileclose"
         android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"/>
    </RelativeLayout>
    
	 			   			  	 		        </FrameLayout>
	 			   			  	 	
</LinearLayout>


    		   
    		        </FrameLayout>
    		        
